fix: load seq from arrangement doesn't parse a file